Layout fix